--- a/LabWork/lab_5_01/lab_5_01.html
+++ b/LabWork/lab_5_01/lab_5_01.html
@@ -1,1 +1,30 @@
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Интерактивный пазл</title>
+    <link rel="stylesheet" href="lab_5_01.css">
+</head>
+<body>
+    <div class="container">
+        <h1>Интерактивный пазл</h1>
+        <div id="puzzle-container">
+            <div class="puzzle-piece" data-id="1" style="background-image: url('images/1.jpg');"></div>
+            <div class="puzzle-piece" data-id="2" style="background-image: url('images/2.jpg');"></div>
+            <div class="puzzle-piece" data-id="3" style="background-image: url('images/3.jpg');"></div>
+            <div class="puzzle-piece" data-id="4" style="background-image: url('images/4.jpg');"></div>
+            <div class="puzzle-piece" data-id="5" style="background-image: url('images/5.jpg');"></div>
+            <div class="puzzle-piece" data-id="6" style="background-image: url('images/6.jpg');"></div>
+            <div class="puzzle-piece" data-id="7" style="background-image: url('images/7.jpg');"></div>
+            <div class="puzzle-piece" data-id="8" style="background-image: url('images/8.jpg');"></div>
+            <div class="puzzle-piece" data-id="9" style="background-image: url('images/9.jpg');"></div>        
+        </div>
+        <button id="check-button">Проверить сборку</button>
+        <button id="shuffle-button">Перемешать</button> <!-- Новая кнопка -->
+    </div>
+
+    <script src="lab_5_01.js"></script>
+</body>
+</html>
 
